US31: Implementer filtrering af entities i eksport request (Done)